<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:padding="20dp">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/purple_200"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      android:orientation="vertical"
      android:gravity="start"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/inversor_digital"
          android:gravity="center"
          android:textSize="35sp"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/teal_200"
        android:orientation="vertical"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="30dp"
          android:background="@color/white"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analisis_de_inversiones"
            android:gravity="center"
            android:textSize="25sp"
            />
      </LinearLayout>

      
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/inversion_1"
          android:gravity="left"
          android:layout_margin="3dp"/>
      <LinearLayout
          android:id="@+id/container_monto_1"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:orientation="horizontal"
          android:gravity="center"
          android:background="@color/teal_700">
        <TextView
            android:id="@+id/text_view_monto_1"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/monto"
            android:gravity="center"
        />
        <EditText
            android:id="@+id/edit_text_monto_1"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="text"/>


      </LinearLayout>
      <LinearLayout
          android:id="@+id/container_tasa_1"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:orientation="horizontal"
          android:gravity="center"
          android:background="@color/teal_700">
        <TextView
            android:id="@+id/text_view_tasa_1"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/tasa"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/edit_text_tasa_1"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="text"/>


      </LinearLayout>
      <LinearLayout
          android:id="@+id/container_plazo_1"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:orientation="horizontal"
          android:gravity="center"
          android:background="@color/teal_700">
        <TextView
            android:id="@+id/text_view_plazo_1"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/plazo"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/edit_text_plazo_1"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="text"/>


      </LinearLayout>
      <LinearLayout
          android:id="@+id/container_entidad_1"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:orientation="horizontal"
          android:gravity="center"
          android:background="@color/teal_700">
        <TextView
            android:id="@+id/text_view_entidad_1"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/entidad"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/edit_text_entidad_1"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="text"/>


      </LinearLayout>
      <LinearLayout
          android:id="@+id/container_tipo_1"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:orientation="horizontal"
          android:gravity="center"
          android:background="@color/teal_700">
        <TextView
            android:id="@+id/text_view_tipo_1"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/tipo"
            android:gravity="center"
            />
        <Spinner
            android:id="@+id/spinner_1"
            android:layout_width="180dp"
            android:layout_height="20dp"/>


      </LinearLayout>


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/inversion_2"
          android:gravity="left"
          android:layout_margin="3dp"/>
      <LinearLayout
          android:id="@+id/container_monto_2"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:orientation="horizontal"
          android:gravity="center"
          android:background="@color/teal_700">
        <TextView
            android:id="@+id/text_view_monto_2"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/monto"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/edit_text_monto_2"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="text"/>


      </LinearLayout>
      <LinearLayout
          android:id="@+id/container_tasa_2"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:orientation="horizontal"
          android:gravity="center"
          android:background="@color/teal_700">
        <TextView
            android:id="@+id/text_view_tasa_2"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/tasa"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/edit_text_tasa_2"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="text"/>


      </LinearLayout>
      <LinearLayout
          android:id="@+id/container_plazo_2"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:orientation="horizontal"
          android:gravity="center"
          android:background="@color/teal_700">
        <TextView
            android:id="@+id/text_view_plazo_2"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/plazo"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/edit_text_plazo_2"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="text"/>


      </LinearLayout>
      <LinearLayout
          android:id="@+id/container_entidad_2"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:orientation="horizontal"
          android:gravity="center"
          android:background="@color/teal_700">
        <TextView
            android:id="@+id/text_view_entidad_2"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/entidad"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/edit_text_entidad_2"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="text"/>


      </LinearLayout>
      <LinearLayout
          android:id="@+id/container_tipo_2"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:orientation="horizontal"
          android:gravity="center"
          android:background="@color/teal_700">
        <TextView
            android:id="@+id/text_view_tipo_2"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/tipo"
            android:gravity="center"
            />
        <Spinner
            android:id="@+id/spinner_2"
            android:layout_width="180dp"
            android:layout_height="20dp"/>


      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/teal_700"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/calcular_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="calcular"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/historial_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="historial"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/terminos_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="terminos"/>

      </LinearLayout>



    </LinearLayout>
  </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>